Issue #3080213 by jrockowitz: Add preliminary support for Claro admin theme. Fix table drag alignment.

--- a/css/webform.theme.claro.css
+++ b/css/webform.theme.claro.css
@@ -114,10 +114,15 @@ html.js .webform-message--close .webform-message__link:active {
  * Align all tables cells need to align top, so we are removing the cell height
  * and adding more padding around the cells.
  */
-table td {
+table td,
+table td.tabledrag-cell {
   vertical-align: top;
   height: auto;
   padding: 1em 1rem;
+}
+
+table td.tabledrag-cell .tabledrag-handle::after {
+  padding: 0 1rem
 }
 
 /**
